--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@ function openLink(url) {
     });
 </script>
 
-        <img onclick="openLink('/p/music')" src='https://t3.ftcdn.net/jpg/04/54/66/12/360_F_454661277_NtQYM8oJq2wOzY1X9Y81FlFa06DVipVD.jpg' style='background:white; border-radius:50%; width:32px; height:32px; right:65px; position: absolute;'/>
+        <img onclick="openLink('https://hivajoy-music.vercel.app')" src='https://t3.ftcdn.net/jpg/04/54/66/12/360_F_454661277_NtQYM8oJq2wOzY1X9Y81FlFa06DVipVD.jpg' style='background:white; border-radius:50%; width:32px; height:32px; right:65px; position: absolute;'/>
     
        
 <style>
