--- a/index.html
+++ b/index.html
@@ -633,7 +633,8 @@ function openLink(url) {
     </span>            <!-- Menu Header -->
             <div style="display: flex; align-items: center; top: 0; position: relative; width: 100%; height: 50px; background-color: black;">
                 <img src="/IMG_20250608_185851.jpg" style="position:relative;width: 32px; height: 32px; margin: 8px;left:20px;"/>
-                <p style="font-size: 24px; color: rgb(255, 140, 0); margin: 0; margin-left: 20px;"><b>Hivajoy</b></p>
+              
+                <img src="/IMG_20250608_190702.jpg" style="position:relative;width: 150px; height: 32px; margin: 8px;left:20px;"/>
             </div>
         
             <!-- Menu Content -->
