--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@ function openLink(url) {
     });
 </script>
 
-        <img onclick="openLink('https://hivajoy-music.vercel.app')" src='https://t3.ftcdn.net/jpg/04/54/66/12/360_F_454661277_NtQYM8oJq2wOzY1X9Y81FlFa06DVipVD.jpg' style='background:white; border-radius:50%; width:32px; height:32px; right:65px; position: absolute;'/>
+        <img onclick="openLink('https://hivajoy-music.vercel.app')" src='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjx2T915pKOAI1H82rndM_gFB1pGTqX9NgYjh7M5WGF5R1EIgYnnDXOe_ceeT8gYsCwz2LmT5h93v2RtuC_FSAyAHtL_Az4W6AKgMC7_mH3jMfYPI39hMirPexWrT5u3aqb16MiMqtKOXvwK0W7aj1JpffVl-7mwCY701a2PpXQCzSTXhgGybX9YoKuy64/s1600/360_F_454661277_NtQYM8oJq2wOzY1X9Y81FlFa06DVipVD.jpg' style='background:white; border-radius:50%; width:32px; height:32px; right:65px; position: absolute;'/>
     
        
 <style>
