--- a/terabox.html
+++ b/terabox.html
@@ -894,6 +894,7 @@ function openLink(url) {
             margin-top: 20px;
             width: 100%;
             height: 600px;
+         overflow:hidden;
             
         }
         .containerrr {
