--- a/terabox.html
+++ b/terabox.html
@@ -713,7 +713,7 @@ function openLink(url) {
 
 <!-- Search Icon -->
 <span type="submit" class="search-icon">
-    <i  class="fas fa-search"></i>
+    <img src='https://i.gifer.com/origin/7a/7af214b5cd43f2e9d7e8417e4c7e663b_w200.gif' style='background:white; border-radius:50%; width:30px; height:30px; right:75px;'/>
 </span>
 
 <!-- Search Container -->
