--- a/terabox.html
+++ b/terabox.html
@@ -1136,6 +1136,7 @@ function openLink(url) {
     <span onclick="openLink('/p/contact')" style="color:white;"> Sponsored/Promotion/Advertising</span>
   </p>
 </div>
+ <a href="https://visitorbadge.io/status?path=https%3A%2F%2Fhivajoy.vercel.app"><img src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fhivajoy.vercel.app&countColor=%23263759" /></a>
   </div>
 
 
