--- a/index.html
+++ b/index.html
@@ -1203,6 +1203,7 @@ $(document).ready(function(){
     <span onclick="openLink('/p/contact')" style="color:white;"> Sponsored/Promotion/Advertising</span>
   </p>
 </div>
+ <a href="https://visitorbadge.io/status?path=https%3A%2F%2Fhivajoy.vercel.app"><img src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fhivajoy.vercel.app&countColor=%23263759" /></a>
   </div>
 
 
